# murdoch

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVLOG.md  Dockerfile  README.md  Shuttle.toml  build.rs  fly.toml  murdoch.db  test_config_command
.kiro/: global-rules.md
.kiro/commands/: add-feature.md  code-quality.md  deploy.md
.kiro/specs/dashboard-improvements/: README.md  SUMMARY.md  design.md  requirements.md  spec.md  tasks.md
.kiro/specs/murdoch-discord-bot/: design.md  requirements.md  tasks.md
.kiro/specs/murdoch-enhancements/: design.md  requirements.md  tasks.md
.kiro/specs/single-page-dashboard/: design.md  requirements.md  tasks.md
.kiro/specs/slash-command-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/web-dashboard/: design.md  requirements.md  tasks.md
.kiro/steering/: agent-profile.md
docs/: CONFIGURATION.md  DEPLOYMENT.md  MONITORING.md  SCALING.md  TROUBLESHOOTING.md  grafana-dashboard.json
proptest-regressions/: appeals.txt
src/: analyzer.rs  appeals.rs  backup.rs  buffer.rs  cache.rs  commands.rs  config.rs  context.rs  critical_events.rs  database.rs  discord.rs  error.rs  export.rs  filter.rs  health.rs  lib.rs  main.rs  metrics.rs  models.rs  notification.rs  oauth.rs  pipeline.rs  raid.rs  rbac.rs  rules.rs  session.rs  user_service.rs  warnings.rs  web.rs  websocket.rs
web/: LIGHTHOUSE_AUDIT.md  THEME_IMPLEMENTATION.md  index.html  theme-test.html
web/css/: styles.css
web/js/: api.js  app.js  auth.js  notifications.js  router.js  single-page-dashboard.js  theme.js  websocket.js
