[package]
name = "murdoch"
version = "0.1.0"
edition = "2021"
description = "High-efficiency semantic moderation Discord bot"
license = "MIT"

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client for Gemini API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Regex for Layer 1 filtering
regex = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Rate limiting
governor = "0.8"

# Hashing for content hash
sha2 = "0.10"
hex = "0.4"

# HTTP server for health checks
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Caching
moka = { version = "0.12", features = ["future"] }
dashmap = "6"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# URL encoding for OAuth
urlencoding = "2"

[dev-dependencies]
# Property-based testing
proptest = "1"

# Async test support
tokio-test = "0.4"

# Random for test var names
rand = "0.8"

# Temporary directories for testing
tempfile = "3"

[build-dependencies]
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
